--- a/src/scss/base/_basic.scss
+++ b/src/scss/base/_basic.scss
@@ -5,16 +5,22 @@
 }
 
 body {
-	@include flex-container(column, center, center);
-
 	background: color('haiti');
 	min-height: 100vh;
 	position: relative;
+
+	@include sm {
+		@include flex-container(column, center, center);
+	}
 }
 
 main {
 	max-width: calc-rem(960px);
-	padding: calc-rem(100px) 0 calc-rem(150px) 0;
+	padding: calc-rem(50px) 0 calc-rem(100px) 0;
+
+	@include sm {
+		padding: calc-rem(100px) 0 calc-rem(150px) 0;
+	}
 }
 
 a:focus,
