Fit content above fold on mobile

--- a/src/scss/base/_basic.scss
+++ b/src/scss/base/_basic.scss
@@ -4,8 +4,13 @@
 	background: color('heliotrope');
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	background: color('haiti');
+	min-height: 100%;
 	position: relative;
 
 	@include sm {
