Update body color

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -58,8 +58,8 @@ $z-indexes: (
 
 $colors: (
 	'ghost': #C7CED6,
-	'haiti': #110719,
 	'heliotrope': #9059FF,
 	'purple-heart': #662CDC,
+	'violet': #0E0417,
 	'white': #FFF,
 );
