--- a/src/scss/abstracts/__abstracts.scss
+++ b/src/scss/abstracts/__abstracts.scss
@@ -1,11 +1,9 @@
-
 /* -----------------------------------------------------------------
 *
 * Import all site-wide configuration & helpers e.g. color variables
 *
 ----------------------------------------------------------------- */
 
-@import 
-	'variables',
-	'functions',
-	'mixins';
+@import 'variables',
+'functions',
+'mixins';
