--- a/src/scss/components/__components.scss
+++ b/src/scss/components/__components.scss
@@ -1,13 +1,11 @@
-
 /* --------------------------------------
 *
 * Import all reusable styles e.g. buttons
 *
 --------------------------------------- */
 
-@import 
-	'logo',
-	'btn',
-	'social',
-	'cookie-consent',
-	'js-notice';
+@import 'logo',
+'btn',
+'social',
+'cookie-consent',
+'js-notice';
