--- a/src/scss/base/__base.scss
+++ b/src/scss/base/__base.scss
@@ -1,11 +1,9 @@
-
 /* ---------------------------------
 *
 * Import all basic styles e.g. body
 *
 ---------------------------------- */
 
-@import 
-	'basic',
-	'typography',
-	'container';
+@import 'basic',
+'typography',
+'container';
