--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -58,10 +58,10 @@ $z-indexes: (
 */
 
 $colors: (
-	'black': #000000,
+	'black': #000,
+	'cod-grey': #0D0D0D,
 	'ghost': #C7CED6,
 	'persian-rose': #F72585,
 	'purple': #560BAD,
-	'violet': #0E0417,
 	'white': #FFF,
 );
