--- a/src/scss/base/_basic.scss
+++ b/src/scss/base/_basic.scss
@@ -10,7 +10,7 @@ html {
 
 body {
 	@include flex-container(column, center, center);
-	background: color('violet');
+	background: color('cod-grey');
 	min-height: 100%;
 	position: relative;
 }
